<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="showing_n_listings">{0,choice,0#No listings|1#1 listing|1&lt;{0} listings}</string>
    <string name="updating_listings">Updating…</string>
    <string name="JSAActivity_configure_proxy">Configure proxy</string>
    <string name="JSAActivity_email_application_info_bundle">Email app info bundle</string>
    <string name="JSAActivity_email_database">Email database</string>
    <string name="JSAActivity_email_preferences">Email preferences</string>
    <string name="JSAActivity_print_database_table">Print database table</string>
    <string name="JSAConfigureProxyDialog_enable_poxy">Enable proxy</string>
    <string name="JSAConfigureProxyDialog_host">Host (eg. 192.168.0.2)</string>
    <string name="JSAConfigureProxyDialog_port">Port (eg. 8888)</string>
    <string name="JSAConfigureProxyDialog_title">Configure Proxy</string>
    <string name="JSALibrary_icon">Icon</string>
    <string name="JSALibrary_image">Image</string>
    <string name="JSAPrintDatabaseTableDialog_application_database_not_found">Application database not found</string>
    <string name="JSAPrintDatabaseTableDialog_title">Print Database Table</string>
    <string name="JSASaveFileDialog_file_already_exists">"A file with this name already exists.
Saving will overwrite this file."</string>
    <string name="JSASaveFileDialog_save">Save</string>
    <string name="JSASaveFileDialog_title">Save File</string>
    <string name="_caps_properties_for_rent">PROPERTIES FOR RENT</string>
    <string name="_caps_properties_for_sale">PROPERTIES FOR SALE</string>
    <string name="_create_a_something">or create a %s</string>
    <string name="_error_creating_account_colon_problem">Error creating account: %s</string>
    <string name="_error_logging_in_colon_problem">Error logging in: %s</string>
    <string name="_googlemaps_not_installed">Unfortunately this application cannot be run on this device because the required Google Maps library is not installed.</string>
    <string name="_logout_username">Logout (%s)</string>
    <string name="_lowercase_to">to</string>
    <string name="_n_selected">%d Selected</string>
    <string name="_no_content_description" />
    <string name="_range_from_n_to_m" formatted="false">%s - %s</string>
    <string name="_sdcard_not_mounted">"This application requires that the device external storage is mounted.

Please mount your external storage to continue."</string>
    <string name="_show_open_homes_on_date">Show open homes on %s</string>
    <string name="_welcome_back_smiley">Welcome back</string>
    <string name="_welcome_to_realestate_person_smiley">Welcome to Realestate %s</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="access_to_location_reason">Access to your location is required for mapping and searching.</string>
    <string name="access_to_storage_reason">Access to your external storage is required to store cached images. You will not be able to view photos if this is permission is not allowed.</string>
    <string name="add">Add</string>
    <string name="add_note">Add Note</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="add_to_my_property">Add to My Property</string>
    <string name="add_to_open_homes">Add to Open Homes</string>
    <string name="added_to_my_property">Added to My Property</string>
    <string name="advertisement">Advertisement</string>
    <string name="affordability">Affordability</string>
    <string name="agent_details">Agent Details</string>
    <string name="any">Any</string>
    <string name="app_crash_toast">Oh snap! Realestate crashed. A report has been sent. Sorry for the inconvenience.</string>
    <string name="app_name">Realestate</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archived_properties">Archived Properties</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="call">Call</string>
    <string name="call_agent">Call Agent</string>
    <string name="call_agent_underlined">&lt;u>Call Agent&lt;/u></string>
    <string name="call_p">Call %s</string>
    <string name="call_westpac_office">Call Westpac Office</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checklist">Checklist</string>
    <string name="competition_rules">Competition Rules</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact">Contact</string>
    <string name="contact_underlined">&lt;u>Contact&lt;/u></string>
    <string name="contacts">Contacts</string>
    <string name="discover_for_sale">Discover a whole world of property for sale around you</string>
    <string name="email_address">Email address</string>
    <string name="enter_to_win">Enter to Win</string>
    <string name="first_and_last_name">First and last name</string>
    <string name="hybrid">Hybrid</string>
    <string name="map">Map</string>
    <string name="my_property">My Property</string>
    <string name="near_me">Near Me</string>
    <string name="overall">Overall</string>
    <string name="overview">Overview</string>
    <string name="password">Password</string>
    <string name="property">Property</string>
    <string name="property_type">Property Type</string>
    <string name="refine_location">Refine location</string>
    <string name="rentals">Rentals</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="your_email">Your Email</string>
    <string name="your_message">Your Message</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone">Your Phone</string>
</resources>