<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <fragment android:id="@id/map_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.google.android.gms.maps.SupportMapFragment" />
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="60.0dip" android:layout_marginBottom="10.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
            <Button android:id="@id/map_appearance_map_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/map" />
            <Button android:id="@id/map_appearance_hybrid_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hybrid" />
        </LinearLayout>
    </RelativeLayout>
    <ImageView android:id="@id/ad_imageview" android:background="@android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitCenter" android:contentDescription="@string/advertisement" />
</LinearLayout>