<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <view android:id="@id/map" android:layout_width="fill_parent" android:layout_height="fill_parent" class="nz.co.realestate.android.lib.util.RESTouchableMapView"
      xmlns:android="http://schemas.android.com/apk/res/android" />
    <FrameLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <android.support.v7.widget.CardView android:gravity="center" android:id="@id/view2" android:layout_width="wrap_content" android:layout_height="@dimen/sub_header_height" android:layout_marginTop="12.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" app:cardCornerRadius="20.0dip">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="@dimen/sub_header_height">
            <ImageView android:id="@id/location_button" android:background="?selectableItemBackground" android:paddingLeft="8.0dip" android:layout_width="@dimen/sub_header_button_height" android:layout_height="@dimen/sub_header_button_height" android:src="@drawable/ic_search_grey_600_24dp" android:contentDescription="@string/refine_location" />
            <TextView android:ellipsize="end" android:gravity="center" android:id="@id/listing_count_textview" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:singleLine="true" android:textIsSelectable="false" style="@style/Application.Text.Medium.LightGrey" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="60.0dip" android:layout_marginBottom="10.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
        <Button android:id="@id/map_appearance_map_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/map" />
        <Button android:id="@id/map_appearance_hybrid_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hybrid" />
    </LinearLayout>
</RelativeLayout>